# recommender_systems

ai_image_search/: .gitignore  main.py  pyproject.toml
apriori/: README.md  cmpe256_arm.py  main.py  pyproject.toml  test.py
apriori/data/: association_rules.csv  frequent_itemsets.csv  next_item_predictions.csv
food_security/: .gitignore  README.md  food_security.ipynb  main.py  notebook_description.txt  philosophy_recommender.ipynb  pyproject.toml
hopping_window/: README.md  crude.py  main.py  pyproject.toml
hopping_window/data/: DCOILWTICO_weekly_hopping_mean_max.csv
spam_filter/: data_utils.py  requirements.txt  rule_based_tf-idf_filter.py  run_spam_filter.py  sanity_check.py  vectorize.py
spam_filter/work/: baseline_tfidf_scores.csv  labels.csv  predictions_one_class.csv  texts_clean.csv  tfidf_rule_results.csv
